# nbaproject

./: .gitignore  LICENSE  README.md  getpm.py  getschedule.py  nba.py  nbatest.ipynb  pbptest.ipynb  pbptest.py  pbptestsave.py  pyproject.toml  scrapetest.ipynb  sklearn.ipynb  sklearn_test.py  test.py  test.ts  unicorncopy.py
nbaproject/: PlayerSeasonData.py  PlayerTracker.py  Season.py  bpm.ipynb  bpm.py  build_shot_chance_data.ipynb  build_shot_chance_data.py  build_simple_rebound_model.py  build_simple_try_model.py  calcRAPM.ipynb  get_stats.ipynb  load_roster_br.py  nba.py  nba_dataclasses.py  nba_utils.py  nbatest.ipynb  pbptest.ipynb  pbptest.py  predict_rebounds.ipynb  predict_tries.ipynb  readPlayerTransactions.ipynb  readPlayerTransactions.py  scrape_nba_stats_boxscore.ipynb  scrapetest.ipynb  shot_chance.ipynb  win_prob.ipynb
tftutorials/: GAN.ipynb  loadPandas.ipynb  overfitunderfit.ipynb  tf.py  tfregressiontutorial.ipynb  tftest.ipynb  timeseries.ipynb  tuner.ipynb
