[tool.poetry]
name = "nbaproject"
version = "0.1.0"
description = "Calculate nba analytics"
authors = ["bahalbach <bahalbach@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.9"
numpy = "^1.21.4"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
bs4 = "^0.0.1"
nba-api = "^1.1.11"
setuptools = "^60.5.0"
tensorflow = "^2.7.0"
sklearn = "^0.0"
Unidecode = "^1.3.2"
html5lib = "^1.1"
lxml = "^4.7.1"
keras-tuner = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
